--- a/roles/docker/templates/docker.service.j2
+++ b/roles/docker/templates/docker.service.j2
@@ -18,7 +18,6 @@ Documentation=https://docker.io
 BindsTo=containerd.service
 After=network.target local-fs.target
 Wants=network-online.target
-Requires=docker.socket
 
 [Service]
 ExecStartPre=-/sbin/modprobe overlay
@@ -41,4 +40,4 @@ TasksMax=infinity
 OOMScoreAdjust=-999
 
 [Install]
-eantedBy=multi-user.target
+WantedBy=multi-user.target
