--- a/roles/docker/templates/daemon.json.j2
+++ b/roles/docker/templates/daemon.json.j2
@@ -1,10 +1,22 @@
 {
- "log-driver": "json-file",
- "log-opts": {
-   "max-size": {{ docker_max_log_size }}
- },
- "exec-root": "{{ docker_state_dir }}",
- "data-root": "{{ docker_storage_dir }}",
- "log-level": "{{ docker_debug_level | default('info') }}",
- "oom-score-adjust": {{ docker_oom_score }}
+    "log-driver": "json-file",
+    "exec-root": "{{ docker_state_dir }}",
+    "data-root": "{{ docker_storage_dir }}",
+    "log-level": "{{ docker_debug_level | default('info') }}",
+    "oom-score-adjust": {{ docker_oom_score }},
+    "bridge": "none",
+    "default-ulimits": {
+        "nofile": {
+            "hard": 1048576,
+            "name": "nofile",
+            "soft": 1048576
+        }
+    },
+    "ip-forward": {{ docker_ip_forward }},
+    "iptables": {{ docker_use_iptables }},
+    "live-restore": true,
+    "log-opts": {
+        "max-file": "{{ docker_max_log_file }}",
+        "max-size": "{{ docker_max_log_size }}"
+    }
 }
