Add override for containerd snapshotter
Some underlying storage types do not support the default
snapshotter so we add a variable to allow a different snapshotter
type to be selected.

--- a/roles/containerd/templates/config.toml.j2
+++ b/roles/containerd/templates/config.toml.j2
@@ -21,3 +21,5 @@ oom_score = {{ containerd_oom_score }}
       [plugins."io.containerd.grpc.v1.cri".registry.configs."{{ registry }}".tls]
         insecure_skip_verify = true
       {% endfor %}
+  [plugins."io.containerd.grpc.v1.cri".containerd]
+    {% if containerd_snapshotter | length %}snapshotter = "{{ containerd_snapshotter }}"{% endif %}
