--- a/roles/containerd/templates/containerd.service.j2
+++ b/roles/containerd/templates/containerd.service.j2
@@ -15,7 +15,7 @@
 [Unit]
 Description=containerd container runtime
 Documentation=https://containerd.io
-After=network.target local-fs.target
+After=network.target dbus.service
 
 [Service]
 ExecStartPre=-/sbin/modprobe overlay
@@ -34,6 +34,7 @@ Delegate=yes
 KillMode=process
 Restart=always
 RestartSec=5
+
 # Having non-zero Limit*s causes performance problems due to accounting overhead
 # in the kernel. We recommend using cgroups to do container-local accounting.
 LimitNPROC={{ containerd_limit_proc_num }}
