--- a/roles/containerd/templates/config.toml.j2
+++ b/roles/containerd/templates/config.toml.j2
@@ -14,15 +14,6 @@ oom_score = {{ containerd_oom_score }}
     enable_selinux = true
 {% endif %}
   [plugins."io.containerd.grpc.v1.cri".registry]
-    [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
-      {% for registry in containerd_insecure_registries %}
-      [plugins."io.containerd.grpc.v1.cri".registry.mirrors."{{ registry }}"]
-        endpoint = ["http://{{ registry }}"]
-      {% endfor %}
-    [plugins."io.containerd.grpc.v1.cri".registry.configs]
-      {% for registry in containerd_insecure_registries %}
-      [plugins."io.containerd.grpc.v1.cri".registry.configs."{{ registry }}".tls]
-        insecure_skip_verify = true
-      {% endfor %}
+    config_path = "/etc/containerd/certs.d"
   [plugins."io.containerd.grpc.v1.cri".containerd]
     {% if containerd_snapshotter | length %}snapshotter = "{{ containerd_snapshotter }}"{% endif %}
