fix: use new format snapshotter config for containerd v2
For some reason, despite still indicating a v2 config file,
the v3 syntax is necessary when specifying the snapshotter,
otherwise the default is used. Really this feels like a
containerd bug, but this approach appears to work.

Additionally, when using a non-default snapshotter, it
may be necessary to specify a platform, otherwise image
pulls can fail.

Signed-off-by: Andrew Bonney <andrew.bonney@bbc.co.uk>

--- a/roles/containerd/templates/config.toml.j2
+++ b/roles/containerd/templates/config.toml.j2
@@ -24,5 +24,18 @@ oom_score = {{ containerd_oom_score }}
       [plugins."io.containerd.grpc.v1.cri".registry.configs."{{ registry }}".tls]
         insecure_skip_verify = true
       {% endfor %}
+
+{% if containerd_snapshotter | length %}
+  {% if containerd_version.split(".")[0] == 1 %}
   [plugins."io.containerd.grpc.v1.cri".containerd]
-    {% if containerd_snapshotter | length %}snapshotter = "{{ containerd_snapshotter }}"{% endif %}
+    snapshotter = "{{ containerd_snapshotter }}"
+  {% else %}
+  [plugins."io.containerd.cri.v1.images"]
+    snapshotter = "{{ containerd_snapshotter }}"
+    {% if containerd_snapshotter_platform | length %}
+  [[plugins."io.containerd.transfer.v1.local".unpack_config]]
+    platform = "{{ containerd_snapshotter_platform }}"
+    snapshotter = "{{ containerd_snapshotter }}"
+    {% endif %}
+  {% endif %}
+{% endif %}
